--- a/Indicators.html
+++ b/Indicators.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -219,7 +219,7 @@
                     Responsive block with counters and media. 
                 </h3>
                 <div class="mbr-figure">
-                    <img src="assets/images/background64.jpg">
+                    <img src="assets/images/background612.jpg">
                 </div>
             </div>
             <div class="cards-block">
@@ -850,7 +850,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.co/">
-                        <img src="assets/images/logo26.png" alt="Mobirise">
+                        <img src="assets/images/logo214.png" alt="Mobirise">
                     </a>
                 </div>
             </div>
