--- a/Employers.html
+++ b/Employers.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -134,7 +134,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background15.jpg" alt="Mobirise">
+                        <img src="assets/images/background113.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
@@ -150,7 +150,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background20.jpg" alt="Mobirise">
+                        <img src="assets/images/background28.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
@@ -167,7 +167,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background31.jpg" alt="Mobirise">
+                        <img src="assets/images/background39.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
@@ -182,7 +182,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background42.jpg" alt="Mobirise">
+                        <img src="assets/images/background410.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
