--- a/JobAdd.html
+++ b/JobAdd.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="hIxwiDf7/4HD/0AXSsg1aEXjWFKgbZjmBh+OXRTffYsWr7CQ7hI+AbvfvPZPN6e/ZhI+KBPnxDWsBb4sPJEz3mrGrR9IzA1SLDRPwyNpukyyfKlEgsdAFyNCF2ObcKRd">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="r3Nr/PYKyZ75c669JN72JiK6VSnpBlUzdfk2uWp6lfNguascqUF5MPE2v37VmJKvdVWKS1teoCqA4F0PaOTFYYaF1s5mf61tYDOT9FH1GwR8yz/HFIVs0UBSZvkyhCcV">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
