--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -110,7 +110,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="II/3Wke9KA87GDZDk6ipl9Z/lyG46Bzyk6AM9/Gc7Wevan2VPFYQ2DaJau0hnD9d4thfg0iVnzpEyGWhZM3V9y9k61OECKgGFLGcHM/wESFULN843h0moezu2S3vxsrP">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MBmJuW8cN5X2shD0ZFVRcQLcAY0oae5creJR0SQ5Bb61ScBUyyaIxQi8YHhM2eUedrtVhBYdbY7uqRkAKtxYw2Vh/b27k6o/GaSePC1WxAbj3lJ4U+hXunuhf3CCTLhd">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
