--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="XKDWGphisLAf9jxQkNqxDYI6Ij0XkWk44ffo99iNaKXGwBnekX0J40x41RXyB+WVEK72joD8tLe95sVYQj+UpYAdJXNjD2T1XDX5W/HbAQIT/c+M7ApdTzAXB3z5rfU7">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cQHo5uJ0MojP/toLDbAF5SO3aNZpPPCAISmZZtgf7kcRlBB/Kfj5PAi876B3qzMTkyQQOOkmKY5p1uJFOLcAMoOLhaVtqx9bL96EuO3C/t+X/XQt99cgp8NR6zoDh0ou">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
