--- a/Indicators.html
+++ b/Indicators.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -109,12 +109,12 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">مؤشرات سوق العمل</h1>
-                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">Labour Market Indicators</h3>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Labour Market Inforamtion System</h1>
+                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2"><strong>Labour Market Indicators</strong></h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Full width intro with adjustable height, background image and a color overlay. Click any text to edit or style it.
                 </p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-success display-5" href="https://mobirise.co">المزيد</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-success display-5" href="https://mobirise.co">More</a></div>
             </div>
         </div>
     </div>
@@ -219,7 +219,7 @@
                     Responsive block with counters and media. 
                 </h3>
                 <div class="mbr-figure">
-                    <img src="assets/images/background612.jpg">
+                    <img src="assets/images/background620.jpg">
                 </div>
             </div>
             <div class="cards-block">
@@ -850,7 +850,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.co/">
-                        <img src="assets/images/logo214.png" alt="Mobirise">
+                        <img src="assets/images/logo222.png" alt="Mobirise">
                     </a>
                 </div>
             </div>
