--- a/SchoolToLaborReport.html
+++ b/SchoolToLaborReport.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
 
     
 
@@ -105,7 +105,7 @@
     
 
     <div class="container">
-        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">مؤشرات الانتقال لسوق العمل</h2>
+        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">School to Labour Market Indictors</h2>
         <h3 class="mbr-section-subtitle mbr-fonts-style display-5">
             School to Labour Market Indicators</h3>
 
