--- a/reports.html
+++ b/reports.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1c">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1c">
 
     
 
@@ -107,14 +107,13 @@
 
     <div class="container">
         <div class="media-container-column mbr-white col-lg-8 col-md-10">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">نظام معلومات سوق العمل</h1>
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Labour Market Inforamtion System</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><span style="font-style: normal;"><strong>
-                التقارير والمؤشرات</strong></span></h3>
+                Reports and Indicators</strong></span></h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
-                هناك استراتجية وسياسات تحت التطبيق لتعميم منظومة الارشاد الوظيفى فى المدارس والمصانع والشركات وربط النظومة بين الطالب والخريج واولياء الامور لمساعدة الخريج او الباحث عن الوظيفة فى ايجاد وظيفة مناسبة وملائمة لخبراتة أو ارشادة لزيادة هذه الخبرات - كما تحتوى المنظومة على تقييم ذاتى الكترونى ومساعدات لتحسين السيرة الذاتية وغيره من الادوات الحديثة فى التقييم والارشاد الوظيفى ويمكن التعرف أكثر من خلال الفيديو الاسترشادى
-            </p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="#top">المزيد</a>
-                <a class="btn btn-md btn-black-outline display-4" href="#top">فيديو استرشادى</a></div>
+                Labour Market Inforamtion system reports and indicators is where you find hisotrical and current reprots or create your own reports from the available data, it is also a tool for reading LMIS lagging and leading indicators that refelect the labour market and assist in decision making</p>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="#top">Sample Reports<br></a>
+                <a class="btn btn-md btn-black-outline display-4" href="#top">More..</a></div>
         </div>
     </div>
 
@@ -131,9 +130,9 @@
 
     
     <div class="container">
-        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2"><strong>التقارير الرئيسية</strong></h2>
+        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2"><strong>LMI Main Report</strong></h2>
         <h3 class="mbr-section-subtitle display-5 align-center mbr-fonts-style mbr-light">
-            تقارير ومؤشرات سوق العمل</h3>
+            LMIS Reports &amp; Indicators</h3>
         <div class="media-container-row pt-5 ">
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper ">
@@ -142,10 +141,10 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background113.jpg" alt="Mobirise">
+                        <img src="assets/images/background121.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-5">تقارير ومؤشرات سوق العمل</h4>
+                        <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
                         <p class="mbr-text mbr-fonts-style align-left display-7">
                             تقرير سوق العمل من أهم المؤشرات الشهرية الرئيسية التي تشير إلى محصلة النشاط الاقتصادي لأنه يغطي جميع القطاعات الأساسية لاقتصاد الدولة . إنه شامل ويعلن في وقت مبكر من الشهر . تعتمد الكثير من المؤشرات الاقتصادية الأخرى على بياناته . إنه لا يقدم معلومات عن سوق العمل فحسب بل يظهر مستوى الدخل والإنتاج أيضا . باختصار يوفر معلومات أساسية للمؤشرات الاقتصادية الأخرى التي تُعلن خلال الشهر ويلعب دورا فعالا" في التأثير المادي على أسواق
                         </p>
@@ -159,10 +158,10 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background28.jpg" alt="Mobirise">
+                        <img src="assets/images/background216.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-5">تقارير ومؤشرات سوق العمل</h4>
+                        <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                            تقرير سوق العمل من أهم المؤشرات الشهرية الرئيسية التي تشير إلى محصلة النشاط الاقتصادي لأنه يغطي جميع القطاعات الأساسية لاقتصاد الدولة . إنه شامل ويعلن في وقت مبكر من الشهر . تعتمد الكثير من المؤشرات الاقتصادية الأخرى على بياناته . إنه لا يقدم معلومات عن سوق العمل فحسب بل يظهر مستوى الدخل والإنتاج أيضا . باختصار يوفر معلومات أساسية للمؤشرات الاقتصادية الأخرى التي تُعلن خلال الشهر ويلعب دورا فعالا" في التأثير المادي على أسواق
                         </p>
@@ -177,10 +176,10 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background39.jpg" alt="Mobirise">
+                        <img src="assets/images/background317.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-5">تقارير ومؤشرات سوق العمل</h4>
+                        <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             تقرير سوق العمل من أهم المؤشرات الشهرية الرئيسية التي تشير إلى محصلة النشاط الاقتصادي لأنه يغطي جميع القطاعات الأساسية لاقتصاد الدولة . إنه شامل ويعلن في وقت مبكر من الشهر . تعتمد الكثير من المؤشرات الاقتصادية الأخرى على بياناته . إنه لا يقدم معلومات عن سوق العمل فحسب بل يظهر مستوى الدخل والإنتاج أيضا . باختصار يوفر معلومات أساسية للمؤشرات الاقتصادية الأخرى التي تُعلن خلال الشهر ويلعب دورا فعالا" في التأثير المادي على أسواق
                         </p>
@@ -206,7 +205,7 @@
                     <span class="mbri-bootstrap mbr-iconfont"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title py-3 mbr-fonts-style display-7">تقارير ومؤشرات سوق العمل</h4>
+                    <h4 class="card-title py-3 mbr-fonts-style display-7">LMIS Reports &amp; Indicators</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        تقرير سوق العمل من أهم المؤشرات الشهرية الرئيسية التي تشير إلى محصلة النشاط الاقتصادي لأنه يغطي جميع القطاعات الأساسية لاقتصاد الدولة . إنه شامل ويعلن في وقت مبكر من الشهر . تعتمد الكثير من المؤشرات الاقتصادية الأخرى على بياناته . إنه لا يقدم معلومات عن سوق العمل فحسب بل يظهر مستوى الدخل والإنتاج أيضا . باختصار يوفر معلومات أساسية للمؤشرات الاقتصادية الأخرى التي تُعلن خلال الشهر ويلعب دورا فعالا" في التأثير المادي على أسواق
                     </p>
@@ -218,7 +217,7 @@
                     <span class="mbri-touch mbr-iconfont"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title py-3 mbr-fonts-style display-5"><strong>تقارير ومؤشرات سوق العمل</strong></h4>
+                    <h4 class="card-title py-3 mbr-fonts-style display-5"><strong>LMIS Reports &amp; Indicators</strong></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        تقرير سوق العمل من أهم المؤشرات الشهرية الرئيسية التي تشير إلى محصلة النشاط الاقتصادي لأنه يغطي جميع القطاعات الأساسية لاقتصاد الدولة . إنه شامل ويعلن في وقت مبكر من الشهر . تعتمد الكثير من المؤشرات الاقتصادية الأخرى على بياناته . إنه لا يقدم معلومات عن سوق العمل فحسب بل يظهر مستوى الدخل والإنتاج أيضا . باختصار يوفر معلومات أساسية للمؤشرات الاقتصادية الأخرى التي تُعلن خلال الشهر ويلعب دورا فعالا" في التأثير المادي على أسواق
                     </p>
@@ -230,7 +229,7 @@
                     <span class="mbri-responsive mbr-iconfont"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title py-3 mbr-fonts-style display-7"><strong>تقارير ومؤشرات سوق العمل</strong></h4>
+                    <h4 class="card-title py-3 mbr-fonts-style display-7"><strong>LMIS Reports &amp; Indicators</strong></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        تقرير سوق العمل من أهم المؤشرات الشهرية الرئيسية التي تشير إلى محصلة النشاط الاقتصادي لأنه يغطي جميع القطاعات الأساسية لاقتصاد الدولة . إنه شامل ويعلن في وقت مبكر من الشهر . تعتمد الكثير من المؤشرات الاقتصادية الأخرى على بياناته . إنه لا يقدم معلومات عن سوق العمل فحسب بل يظهر مستوى الدخل والإنتاج أيضا . باختصار يوفر معلومات أساسية للمؤشرات الاقتصادية الأخرى التي تُعلن خلال الشهر ويلعب دورا فعالا" في التأثير المادي على أسواق
                     </p>
@@ -328,7 +327,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background113.jpg" alt="Mobirise">
+                        <img src="assets/images/background121.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">تقارير ومؤشرات سوق العمل</h4>
@@ -344,7 +343,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background28.jpg" alt="Mobirise">
+                        <img src="assets/images/background216.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">تقارير ومؤشرات سوق العمل</h4>
@@ -360,7 +359,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background39.jpg" alt="Mobirise">
+                        <img src="assets/images/background317.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">تقارير ومؤشرات سوق العمل</h4>
