--- a/tools.html
+++ b/tools.html
@@ -109,9 +109,9 @@
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    نظام معلومات سوق العمل</h1>
+                    Labour Market Information System</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-2"><strong>أدوات متنوعة</strong></p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-2"><strong>Tools</strong></p>
                 
             </div>
         </div>
@@ -129,11 +129,10 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background113.jpg" alt="Mobirise">
+                        <img src="assets/images/background121.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>
-                            خريطة سوق العمل</strong></h4>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>LMIS Map</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل
                         </p>
@@ -146,11 +145,11 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background28.jpg" alt="Mobirise">
+                        <img src="assets/images/background216.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
-                            بناء التقارير</strong></h4>
+                            Reports</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل
                         </p>
@@ -163,10 +162,10 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background39.jpg" alt="Mobirise">
+                        <img src="assets/images/background317.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>منظومة الاستبيان</strong></h4>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Surveies</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل<br>
                         </p>
@@ -179,11 +178,11 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background410.jpg" alt="Mobirise">
+                        <img src="assets/images/background418.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
-                            دراسات متنوعة</strong></h4>
+                            Studies</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="#top" class="btn btn-primary display-4">
