--- a/training.html
+++ b/training.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
@@ -107,13 +107,13 @@
 
     <div class="container">
         <div class="media-container-column mbr-white col-lg-8 col-md-10">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">نظام معلومات سوق العمل</h1>
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Labour Market Information system</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><span style="font-style: normal;"><strong>
-                منظومة التدريب&nbsp;</strong></span></h3>
+                Training Process and Providers</strong></span></h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
-                منظومة التدريب بنظام معلومات سوق العمل تحتوى على معلومات تفصيلية عن مراكز التدريب على مستوى جمهورية مصر العربية وتسمح بالبحث فى قاعدة البيانات بعدة مفاتيح بحث متنوعة حسب المكان وقطاع التدريب والسعة التدريبية ومعلومات أخرى تفيد المتدربين والمدربين - كما تربط هذه المعلومات بمنظومة التوظيف والتشبيك</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page20.html#footer6-7g">مقدمى الخدمات التدريبية</a>
-                <a class="btn btn-md btn-black-outline display-4" href="page19.html#footer6-7b">البحث عن فرص تدريبية</a></div>
+                Training Process and providers linkes between job search process and career guidance allowing job seekers more chances for a better and decent job by offering additional training and career guidance&nbsp;</p>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page20.html#footer6-7g">Training Providers</a>
+                <a class="btn btn-md btn-warning display-4" href="page19.html#footer6-7b">Training Opportunies</a></div>
         </div>
     </div>
 
