--- a/Education.html
+++ b/Education.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
 
     
 
@@ -107,16 +107,11 @@
 
     <div class="container">
         <div class="media-container-column mbr-white col-lg-8 col-md-10">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">نظام معلومات سوق العمل</h1>
-            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><span style="font-style: normal;"><strong>معلومات الانتقال لسوق العمل</strong></span></h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">تم إنشاء الوحدة تنفيذاً للقرار الوزارى رقم 283 لسنة 2014 بشأن استحداث
-<br>الوحدة المركزية لتيسير االنتقال إلى سوق العمل وإنشاء وحدات فرعية مماثلة
-<br>بالمحافظات.
-<br>بهدف تقديم الخدمات التى من شأنها تيسير انتقال الطالب والخريجين إلى سوق
-<br>العمل واقتراح السياسات واآلليات واألطر المعيارية لخدمات تيسير االنتقال إلى
-<br>سوق العمل&nbsp;</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page16.html#footer6-6s">تقارير<br></a>
-                <a class="btn btn-md btn-black-outline display-4" href="page15.html#footer6-6n">معلومات الانتقال لسوق العمل</a></div>
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Labour Market Information System</h1>
+            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><span style="font-style: normal;"><strong>School to Labour Market Informatoin&nbsp;</strong></span></h3>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">School to labour market are unites or division created to help garduate in finding a decent job and increase the job opportunities in the labour market by collecting market needs and graduates information linking labour market to education</p>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page16.html#footer6-6s">Reports and indicators<br></a>
+                <a class="btn btn-md btn-black-outline display-4" href="page15.html#footer6-6n">Add Labour Market Info</a></div>
         </div>
     </div>
 
@@ -331,7 +326,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bcINalLEFqFU9CEcUrgBfurviPGH/PLFVcfwrSZBmNMoPbrWZ1DfHveHgZed0xaRQuazg+q/o4RF1xFl86Ky48KUzTCnbjtShIGjmB0FTdG1sqviwJgBb4RUKA6ST+gj">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3Ewvdkya4YuHyBI0giLKTpTcjdXjWVXeqOg1bk9fnKWVGV9fCasQ4MWJphSYZXKTYFUE3QdtAoPa6cxUQf3XbA3+kBknAxNo7NXLTAfwTq7aQ6tNnPM7aCMF/Czyt+9c">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
