--- a/JobAdd.html
+++ b/JobAdd.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -109,14 +109,14 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="r3Nr/PYKyZ75c669JN72JiK6VSnpBlUzdfk2uWp6lfNguascqUF5MPE2v37VmJKvdVWKS1teoCqA4F0PaOTFYYaF1s5mf61tYDOT9FH1GwR8yz/HFIVs0UBSZvkyhCcV">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="CQdKSHVUh0lGEz1F38c+wgR/bE7jQJIPyP8jZ7sZG58S18eEHTKJKYIX7EBcBn3lmW/hTc6VIviotmk+fpBE675kSraoEj6gbNszLrAAOODuVEPT4UtgHmdoMQklcjZo">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-2">إضافة وظيفة</h4>
+<h4 class="mbr-fonts-style display-2">Add a New Job</h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="text">
 <input type="text" name="text" placeholder="الوظيفة المطلوبة" data-form-field="text" class="form-control display-7" value="" id="text-formbuilder-72">
