--- a/JobSearch.html
+++ b/JobSearch.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6w">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6w">
 
     
 
@@ -109,14 +109,14 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="WyIA0W8iMC2jNkj3BdCa1diWKqAmjyqk9jV1YkF4mb9I6xGXnoFnPAuGWURnf7HyEIViiprcSmEoL8Z7Lb072wbOgT+yGuCtyz4AclQldbhe0Mv6T7NdjTKEkF2PLXyn">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BeewfPCjtUb7R+Qe/DDl8ZgH3a9UgAY2ravuNdTx4OsSrBOk/LmNu6gVrtQQK0iK2FKWUOGW3iTPD+EaFBaTMHa2B8urnXj/4hVtjSd7reOHvScYmSeM3euz9peN5iF6">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-2">البحث عن وظيفة</h4>
+<h4 class="mbr-fonts-style display-2">Job Search</h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
@@ -133,7 +133,7 @@
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="message">
 <textarea name="message" placeholder="كلمات أخرى" data-form-field="message" class="form-control display-7" id="message-formbuilder-6z"></textarea>
 </div>
-<div class="col-auto"><button type="submit" class="btn btn-primary display-7">ابحث</button></div>
+<div class="col-auto"><button type="submit" class="btn btn-primary display-7">Search</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
@@ -147,7 +147,7 @@
   
   <div class="container container-table">
       <h2 class="mbr-section-title mbr-fonts-style align-center pb-3 display-2">
-          نتيجة البحث</h2>
+          Search Result</h2>
       <h3 class="mbr-section-subtitle mbr-fonts-style align-center pb-5 mbr-light display-5">
             Click blue "Gear" icon in the top right corner to hide/show search and info, change the the table background and other parameters.  In browser click on the table head to sort the table, use search to filter the table.     
       </h3>
