--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -110,14 +110,14 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MBmJuW8cN5X2shD0ZFVRcQLcAY0oae5creJR0SQ5Bb61ScBUyyaIxQi8YHhM2eUedrtVhBYdbY7uqRkAKtxYw2Vh/b27k6o/GaSePC1WxAbj3lJ4U+hXunuhf3CCTLhd">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="dfFmFg0iNUFhuz2/WPmiHlZjCIzP083UFGcWQidVcZnXx8Rb1MQNaM0ruE4xKWV69kbPaT0k+EnQC2KneixU2lKWx2wDO7ZmRYJjZ6xyYK0Pvh3nCgYe9xHuZBy/EcJG">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-2"><strong>معلومات الانتقال لسوق العمل</strong></h4>
+<h4 class="mbr-fonts-style display-2"><strong>School to Labour Market Information</strong></h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
