--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -109,14 +109,14 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="dN1fXuEXhdIZ63fWzbxr+J6hKVmSbURWl/vL0Yf86jhVQmCXAmuzPCC+6xqBmE2Ke1AKSmWzA3F5M0rV4AJknvXLXpBsFSD0MPy3dRSuVlL31VeB0I+hz1EufdgujoRI">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="6fpL/M8xwPI2Nl9QbwQfSCfjrCJICVyCtatGUyGUqXrOk/PmdiSGHCM5+PUeX+jAoalJu21iq7XtrgoTvVvygXr0a5kA+O++z7RQo35ABWmmlJex6p2lf2liroqEXne1">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-2"><strong>مقدمى خدمة التدريب</strong></h4>
+<h4 class="mbr-fonts-style display-2"><strong>Training Providers</strong></h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
