--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -109,14 +109,14 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cQHo5uJ0MojP/toLDbAF5SO3aNZpPPCAISmZZtgf7kcRlBB/Kfj5PAi876B3qzMTkyQQOOkmKY5p1uJFOLcAMoOLhaVtqx9bL96EuO3C/t+X/XQt99cgp8NR6zoDh0ou">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4KezYYcQ+aXYmL8vbRTdS8jp9KuN+6iZvAdW/g19WleDO5bUji31O8NzhFZpe7YGSg4O9Ch1PMkkvjvLmpjxYav+UbAQrtTcMebGLwPFAXLGNxNEF9k9Pc7AE4RmxeKZ">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-2"><strong>البحث عن فرص التدريب</strong></h4>
+<h4 class="mbr-fonts-style display-2"><strong>Training Opportunities Search</strong></h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
@@ -133,7 +133,7 @@
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="message">
 <textarea name="message" placeholder="كلمات أخرى" data-form-field="message" class="form-control display-7" id="message-formbuilder-7c"></textarea>
 </div>
-<div class="col-auto"><button type="submit" class="btn btn-primary display-7">ابحث</button></div>
+<div class="col-auto"><button type="submit" class="btn btn-primary display-7">Search</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
